--- a/app/globals.css
+++ b/app/globals.css
@@ -65,3 +65,7 @@ html:has([data-ui="NextStudioLayout"]) .footer{
 .customFocusOutline:focus-visible{
   outline-color: var(--theme-color);
 }
+
+iframe#launcher{
+  border-radius: 50px !important;
+}
