--- a/app/ui/dashboard/pagination/pagination.module.css
+++ b/app/ui/dashboard/pagination/pagination.module.css
@@ -7,8 +7,14 @@
 .button{
   padding: 5px 10px;
   cursor: pointer;
+  background-color: white;
+  color: black;
+  border-radius: 20px;
 }
 
 .button:disabled{
   cursor: not-allowed;
+  opacity: 0.1;
+  background-color: transparent;
+  color: white;
 }
