--- a/app/globals.css
+++ b/app/globals.css
@@ -69,3 +69,17 @@ html:has([data-ui="NextStudioLayout"]) .footer{
 iframe#launcher{
   border-radius: 50px !important;
 }
+main{
+  position: relative;
+}
+main:before {
+  content: ' ';
+  position: fixed;
+  background-image: url(/bg.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+  width: 100%;
+  height: 100%;
+  opacity: 0.15;
+  z-index: -1;
+}
